[package]
name = "audio-progress-tracker"
version = "0.1.0"
edition = "2021"
description = "Audio playback progress tracker using Rust + Axum"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = true
